--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-DISCORD_BOT_TOKEN=MTA5OTI4ODk0NDgyODQ4MTU1Ng.GgU-qj.RkznqG8AoxydZHNybZKa1bhCBJoKSyoo_0Ttw8
-MINECRAFT_SERVER_ADDRESS=borador.aternos.host:34500
-DATABASE_URL="host=localhost port=5432 user=postgres password=Matwyenko1_ dbname=authme sslmode=disable"
+DISCORD_BOT_TOKEN=MTA5OTI4ODk0NDgyODQ4MTU1Ng.GXnHyr.ipchWpzZ1VN7yaX2vCeXyq7UYqPsUY4vOYVl7g
+DATABASE_URL="postgres://username:password@host:port/database?sslmode=disable"
